Breaking Change: The components now requires translations via @dad-e-class/translations.

--- a/packages/translations/src/lib/dictionaries/en.json
+++ b/packages/translations/src/lib/dictionaries/en.json
@@ -1,6 +1,15 @@
 {
+  "common":{
+    "buttons":{
+
+    }
+  },
   "home": {
     "title": "Home Page",
-    "buttonLabel": "Click Me!"
+    "buttonLabel": "Click Me -- here"
+  },
+  "offers":{
+    "buttonLable": "Button - part",
+    "title" : "Page offers"
   }
 }
