--- a/packages/translations/src/lib/dictionaries/de.json
+++ b/packages/translations/src/lib/dictionaries/de.json
@@ -2,6 +2,10 @@
   "home": {
     "title": "Page d'accueil",
     "buttonLabel": "Cliquez-moi !"
+  },
+  "offers": {
+    "title": "Page d'accueil",
+    "buttonLabel": "Cliquez-moi !"
   }
 
 }
