--- a/packages/translations/tsconfig.json
+++ b/packages/translations/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
