--- a/packages/translations/tsconfig.spec.json
+++ b/packages/translations/tsconfig.spec.json
@@ -2,9 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "composite": true,
-    "declaration": true,
-    "noEmit": false,
     "types": [
       "vitest/globals",
       "vitest/importMeta",
@@ -18,14 +15,14 @@
     "vite.config.mts",
     "vitest.config.ts",
     "vitest.config.mts",
-    "lib/**/*.test.ts",
-    "lib/**/*.spec.ts",
-    "lib/**/*.test.tsx",
-    "lib/**/*.spec.tsx",
-    "lib/**/*.test.js",
-    "lib/**/*.spec.js",
-    "lib/**/*.test.jsx",
-    "lib/**/*.spec.jsx",
-    "lib/**/*.d.ts"
+    "tests/**/*.test.ts",
+    "tests/**/*.spec.ts",
+    "tests/**/*.test.tsx",
+    "tests/**/*.spec.tsx",
+    "tests/**/*.test.js",
+    "tests/**/*.spec.js",
+    "tests/**/*.test.jsx",
+    "tests/**/*.spec.jsx",
+    "tests/**/*.d.ts"
   ]
 }
