--- a/packages/translations/tsconfig.json
+++ b/packages/translations/tsconfig.json
@@ -1,13 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
+    "composite": true,
+    "declaration": true,
     "strict": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "noPropertyAccessFromIndexSignature": true
   },
   "files": [],
