--- a/packages/translations/package.json
+++ b/packages/translations/package.json
@@ -2,19 +2,21 @@
   "name": "@maany_shr/e-class-translations",
   "version": "0.0.1",
   "main": "./index.js",
+  "module": "./index.js",
   "types": "./index.d.ts",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./index.js",
-      "require": "./index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     }
   },
   "dependencies": {
     "zod": "^3.24.1",
     "vite": "^5.4.11",
     "@vitejs/plugin-react": "^4.3.4",
-    "vite-plugin-dts": "~4.3.0",
+    "vite-plugin-dts": "~4.5.0",
     "@nx/vite": "^20.1.4"
   },
   "publishConfig": {
