--- a/packages/translations/package.json
+++ b/packages/translations/package.json
@@ -13,11 +13,7 @@
     }
   },
   "dependencies": {
-    "zod": "^3.24.1",
-    "vite": "^5.4.11",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite-plugin-dts": "~4.5.0",
-    "@nx/vite": "^20.1.4"
+    "zod": "^3.24.1"
   },
   "publishConfig": {
     "access": "public"
