--- a/packages/translations/project.json
+++ b/packages/translations/project.json
@@ -5,15 +5,5 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project translations --web",
-  "targets": {
-    "lint": {"executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/translations/**/*.{ts,tsx,js,jsx}",
-          "packages/translations/package.json"
-        ]
-      }
-    }
-  }
+  "targets": {}
 }
