--- a/packages/translations/package.json
+++ b/packages/translations/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@maany_shr/e-class-translations",
   "version": "0.0.1",
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./index.js",
-      "require": "./index.js"
-    }
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.js"
   },
   "dependencies": {
     "zod": "^3.24.1"
