--- a/packages/translations/project.json
+++ b/packages/translations/project.json
@@ -5,5 +5,12 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project translations --web",
-  "targets": {}
+  "targets": {
+    "nx-release-publish": {
+      "executor": "@nx/js:release-publish",
+      "options": {
+        "packageRoot": "packages/translations"
+      }
+    }
+  }
 }
