Fix 1200+ typing errors
feat(translations): add error handling for missing dictionaries and enable strict null checks

fix(ui-kit): ensure safe access to dictionary properties in various components

fix(ui-kit): handle potential null values for dictionary labels in AddCoachModal and AdminCourseFilterModal

fix(ui-kit): improve type safety for link titles and URLs in assignment builder components

chore(ui-kit): update Vite config to specify tsconfig path for TypeScript checker

--- a/packages/translations/tsconfig.lib.json
+++ b/packages/translations/tsconfig.lib.json
@@ -6,6 +6,7 @@
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": true,
     "declaration": true,
+    "strictNullChecks": true,
     "types": ["node", "vite/client"]
   },
   "include": ["src/**/*.ts"],
